# YOLO-World-Rosaceae

./: README.md  dataset.yaml  pyproject.toml  run_detect.py  run_resume.py  run_train.py
